--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+
+body{
+    padding-bottom: 50px;
+  }
+  .main-container{
+    margin-top: 20px;
+  }
+  
